2005-04-04  Sven Neumann  <sven@gimp.org>

	* app/tools/gimppainttool.[ch] export paint tool statusbar API.
	
	* app/tools/gimpclonetool.c: added statusbar hint.

2005-04-04  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpenv.c (gimp_directory): use g_ascii_isalnum()
	instead of isalnum(). Rephrased some comments.

2005-04-04  Maurits Rijk  <m.rijk@chello.nl>

	* plug-ins/imagemap/imap_edit_area_info.c
	* plug-ins/imagemap/imap_menu.c
	* plug-ins/imagemap/imap_stock.c: replaced 2 icons by GIMP stock
	icons

	* plug-ins/imagemap/images/Makefile.am: changed accordingly
	
	* plug-ins/imagemap/images/stock-arrow.png
	* plug-ins/imagemap/images/stock-link.png: removed accordingly
	
2005-04-04  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdata.c (gimp_data_create_filename): return early if
	called for an internal data object. Fixes bug #172581.

2005-04-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/deinterlace.c (deinterlace): fixed boundary
	conditions that led to incorrect preview (bug #172589).

2005-04-04  Tor Lillqvist  <tml@novell.com>

	* app/widgets/gimpclipboard.c (gimp_clipboard_format_compare): On
	Win32, move the "bmp" format to the front. Means less conversion
	in most cases, as other apps on Win32 typically provide/want the
	BMP format on the Clipboard. (Actually CF_DIB, but that's the
	same, just without the BMP file header.) See also bug #168173.

2005-04-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/FractalExplorer.c: fixed typo that
	caused a crash when deleting a fractal from the list (bug #172347).

2005-04-03  Sven Neumann  <sven@gimp.org>

	* configure.in (ALL_LINGUAS): readded "rw" (Kinyarwanda).

2005-04-03  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/stock-cursor-16.png
	* themes/Default/images/stock-cursor-24.png
	* themes/Default/images/stock-sample-point-16.png
	* themes/Default/images/stock-sample-point-24.png: touch up a
	little.

2005-04-03  Michael Natterer  <mitch@gimp.org>
